--- a/examples/GCP/e4s-23.11-cluster-slurm-gcp-5-9-hpc-rocky-linux-8.yaml
+++ b/examples/GCP/e4s-23.11-cluster-slurm-gcp-5-9-hpc-rocky-linux-8.yaml
@@ -6,7 +6,7 @@ vars:
   image_family: e4s-23-11-slurm-gcp-5-9-hpc-rocky-linux-8 #(2)!
   region: us-central1
   zone: us-central1-a
-  disk_size: 130
+  disk_size_gb: 130
 
 deployment_groups:
 - group: primary
@@ -35,7 +35,7 @@ deployment_groups:
       machine_type: c3-standard-88
       disk_type: pd-balanced
       enable_smt: false
-      disk_size_gb: $(vars.disk_size)
+      disk_size_gb: $(vars.disk_size_gb)
       instance_image:
         family: $(vars.image_family)
         project: $(vars.project_id)
@@ -83,7 +83,7 @@ deployment_groups:
     - homefs
     settings:
       disable_controller_public_ips: false
-      disk_size_gb: $(vars.disk_size)
+      disk_size_gb: $(vars.disk_size_gb)
       instance_image:
         family: $(vars.image_family)
         project: $(vars.project_id)
@@ -97,7 +97,7 @@ deployment_groups:
     settings:
       machine_type: n2-standard-4
       disable_login_public_ips: false
-      disk_size_gb: $(vars.disk_size)
+      disk_size_gb: $(vars.disk_size_gb)
       instance_image:
         family: $(vars.image_family)
         project: $(vars.project_id)
