--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -7,6 +7,7 @@ theme:
     - navigation.tracking
     - navigation.tabs
     - navigation.sections
+    - toc.follow
     - toc.integrate
     - navigation.top
     - search.suggest
@@ -38,6 +39,9 @@ theme:
 #       enabled: !ENV [CI, false]
 
 markdown_extensions:
+  - toc:
+      permalink: true
+      toc_depth: 3
   - pymdownx.emoji:
       emoji_index: !!python/name:material.extensions.emoji.twemoji
       emoji_generator: !!python/name:material.extensions.emoji.to_svg
