--- a/examples/GCP/e4s-23.11-cluster-slurm-gcp-5-9-hpc-rocky-linux-8.yaml
+++ b/examples/GCP/e4s-23.11-cluster-slurm-gcp-5-9-hpc-rocky-linux-8.yaml
@@ -1,7 +1,7 @@
 blueprint_name: e4s-23-11-cluster-slurm-gcp-5-9-hpc-rocky-linux-8
 
 vars:
-  project_id:  "e4s-pro" #(1)!
+#  project_id:  "e4s-pro" #(1)
   deployment_name: e4s-23-11-cluster-slurm-rocky8
   image_family: e4s-23-11-slurm-gcp-5-9-hpc-rocky-linux-8 #(2)!
   region: us-central1
