Add privacy policy for Azure mktplace

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -88,3 +88,4 @@ nav:
     - Cluster Deletion: GCP/Cluster-Deletion.md
   - ODDC:
     - Getting Started: ODDC/getting-started-ODDC.md
+  - Privacy Policy: privacy.md
