--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,14 +19,8 @@ jobs:
         with:
           python-version: '3.x'
           cache: 'pip'
+      - run: pip install -r requirements.txt
       - run: echo "cache_id=$(date --utc '+%V')" >> $GITHUB_ENV
-      - uses: actions/cache@v4
-        with:
-          key: mkdocs-material-${{ env.cache_id }}
-          path: .cache
-          restore-keys: |
-            mkdocs-material-
-      - run: pip install mkdocs-material mkdocs-linkcheck
       - name: Build documentation (strict)
         run: mkdocs build --strict
       - name: Check external links
