Add EULA for IBM Cloud

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -98,4 +98,5 @@ nav:
     - Getting Started: Heidi/getting-started-Heidi.md
   - Azure:
     - Getting Started: Azure/getting-started-Azure.md
+  - EULA: EULA.md
   - Privacy Policy: privacy.md
